<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pyoctomap</name>
  <version>0.1.0</version>
  <description>Python binding of the OctoMap library with bundled shared libraries for ROS integration</description>
  
  <maintainer email="lespinkoo@gmail.com">Spinkoo</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/Spinkoo/pyoctomap</url>
  <url type="repository">https://github.com/Spinkoo/pyoctomap</url>
  <url type="bugtracker">https://github.com/Spinkoo/pyoctomap/issues</url>
  
  <author email="lespinkoo@gmail.com">Spinkoo</author>
  
  <buildtool_depend>python3-setuptools</buildtool_depend>
  
  <depend>python3-numpy</depend>
  <depend>python3-cython</depend>
  
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
